--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dr. [Your Name] | Climate Resilience Research</title>
+  <title>Dr. KAREEM, Kola Yusuff | Climate Resilience Research</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
   <section id="hero" class="d-flex align-items-center text-center">
     <div class="container">
       <h1 class="display-4 fw-bold">Advancing Resilience in a Changing Climate</h1>
-      <p class="lead">Researching water-related disasters, dam safety, and AI-driven hydrodynamic modeling</p>
+      <p class="lead">AI for Water Disaster | Dam Safety | Hydroclimatic Impacts on Reservoir Resilience | AI-driven hydrodynamic modeling | Flood, Landslide, and Drought Risk </p>
       <a href="#research" class="btn btn-primary btn-lg mt-3">Explore My Work</a>
     </div>
   </section>
