--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dr. KAREEM, Kola Yusuff | Climate Resilience Research</title>
+  <title>Dr. (Engr) KAREEM, Kola Yusuff | Climate Resilience Research</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Dr. KAREEM, Kola Yusuff</a>
+      <a class="navbar-brand" href="#">Dr. (Engr) KAREEM, Kola Yusuff</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -38,7 +38,7 @@
   <section id="hero" class="d-flex align-items-center text-center">
     <div class="container">
       <h1 class="display-4 fw-bold">Advancing Resilience in a Changing Climate</h1>
-      <p class="lead">AI for Water Disaster | Dam Safety | Hydroclimatic Impacts on Reservoir Resilience | AI-driven hydrodynamic modeling | Flood, Landslide, and Drought Risk </p>
+      <p class="lead" style="color: purple;">AI for Water Disaster | Dam Safety | Hydroclimatic Impacts on Reservoir Resilience | AI-driven hydrodynamic modeling | Flood, Landslide, and Drought Risk </p>
       <a href="#research" class="btn btn-primary btn-lg mt-3">Explore My Work</a>
     </div>
   </section>
@@ -127,7 +127,7 @@
   </section>
 
   <footer class="bg-dark text-center text-light py-3">
-    <small>© 2025 Dr. [Your Name] — Built with ❤️ and AI</small>
+    <small>© 2025 Dr. (Engr) KAREEM, Kola Yusuff</small>
   </footer>
 
   <!-- Bootstrap JS -->
