Full update publication list in index.html

--- a/index.html
+++ b/index.html
@@ -106,10 +106,46 @@
       <h2 class="text-center mb-4">Selected Publications</h2>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
-          <strong>Doe, J., [Your Name], et al. (2024).</strong> AI-enhanced hydrodynamic modeling for climate resilience. <em>Water Resources Research</em>.
+          <strong>Arheimer, B., Cudennec, C., ..…Kareem, K.Y.,..Xia, J et al. (2024).</strong> The IAHS Science for Solutions decade, with Hydrology Engaging Local People IN one Global world (HELPING). <em>Hydrological Sciences Journal</em>. <a href="https://doi.org/10.1080/02626667.2024.2355202" target="_blank">[DOI Link]</a>
         </li>
         <li class="list-group-item">
-          <strong>[Your Name], et al. (2023).</strong> Integrating machine learning with dam risk management. <em>Journal of Hydrology</em>.
+          <strong>Verma, A., Zanoletti, A., Kareem, K.Y. et al. (2024).</strong> Skin protection from solar ultraviolet radiation using natural compounds: a review. <em>Environ Chem Lett.</em> <a href="https://doi.org/10.1007/s10311-023-01649-4" target="_blank">[DOI Link]</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Kareem, K. Y., Seong, Y., Kim, K., & Jung, Y. (2022).</strong> A Case Study of Tidal Analysis Using Theory-Based Artificial Intelligence Techniques for Disaster Management in Taehwa River, South Korea. <em>Water</em> (Vol. 14, Issue 14). <a href="https://doi.org/10.3390/w14142172" target="_blank">[DOI Link]</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Adelodun, B., Kareem, K. Y.**, Kumar, P., et al. (2021).</strong> Understanding the impacts of the COVID-19 pandemic on sustainable agri-food system and agroecosystem decarbonization nexus: A review. <em>Journal of Cleaner Production</em>, 318(July), 128451. <a href="https://doi.org/10.1016/j.jclepro.2021.128451" target="_blank">[DOI Link]</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Kareem, K.Y., Adelodun B, Tiamiyu A.O. et al., (2021).</strong> Effects of COVID-19: An Environmental Point of View. In: Hussain CM, Shukla SK (eds) Detection and Analysis of SARS Coronavirus. <em>Wiley, Weinheim, Germany</em>, pp 219–242. <a href="https://doi.org/10.1016/B978-0-323-90280-9.00009-2" target="_blank">[DOI Link]</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Kareem, K.Y., Seong, Y., & Jung, Y. (2021).</strong> LSTM prediction of streamflow during peak rainfall of Piney River. <em>Journal of Korean Society of Disaster and Security</em>. <a href="https://doi.org/10.21729/ksds.2021.14.4.17" target="_blank">Link to Publication</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Tiamiyu A.O., Adelodun B, Bakare H.O., Ajibade F.O., Kareem K.Y. et al. (2021).</strong> Role of Nanotechnology in Coronavirus Detection. In: Hussain CM, Shukla SK (eds) Detection and Analysis of SARS Coronavirus. <em>Wiley</em>. <a href="#" target="_blank">Link to Publication</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Akanni, S.B., Kareem K.Y., Adewole G.O. et al. (2021).</strong> Vector autoregressive modeling of crop production index – permanent cropland relationship in Nigeria. <em>Annals Computer Science Series</em>. <a href="https://anale-informatica.tibiscus.ro/download/lucrari/Vol19/19-1-14-Akanni.pdf" target="_blank">Link to Publication</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Suberu, C.E., Kareem, K.Y., & Adeniran, K.A. (2020).</strong> Artificial neural network modelling of biogas yield from co-digestion of poultry droppings and cattle dung. <em>KUSET Journal</em>. <a href="http://old.ku.edu.np/kuset/index.php?go=vol14_no2" target="_blank">Link to Publication</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Adelodun, B., Ajibade, F.O., Ighalo, J.O., Odey, G., Ibrahim, R.G., Kareem, K.Y., Bakare, H.O., Tiamiyu, A.O., Ajibade, T.F., Abdulkadir, T.S., Adeniran, K.A., and Choi, K.S. (2020).</strong> Assessment of socioeconomic inequality based on virus-contaminated water usage in developing countries: A review. <em>Environmental Research</em>. <a href="https://doi.org/10.1016/j.envres.2020.110309" target="_blank">Link to Publication</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Kareem, K.Y., & K.A. Adeniran. (2020).</strong> Effects of electromagnetic irrigation water on Lagos spinach evapotranspiration using lysimetric method. <em>CIGR Journal</em>. <a href="https://cigrjournal.org/index.php/ejounral/article/view/5699" target="_blank">Link to Publication</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Adeniran, K.A., K.Y. Kareem, K.O.Yusuf, and S.O. Afolayan. (2020).</strong> Effects of electromagnetic treatment of irrigation water on growth and yield of Lagos Spinach (Celosia argentae). <em>CIGR Journal</em>. <a href="https://cigrjournal.org/index.php/Ejounral/article/view/5697" target="_blank">Link to Publication</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Garba, M.K., Akanni, S.B., Yahya, W.B., Kareem, K.Y. and R.B. Afolayan. (2020).</strong> Modelling effects of some factors that contribute to cereal yield in Nigeria using Toda-Yamamoto techniques. <em>Sule Lamido Uni. J. of Sc. and Tech</em>. <a href="https://www.slujst.com.ng/index.php/jst/article/view/36" target="_blank">Link to Publication</a>
+        </li>
+        <li class="list-group-item">
+          <strong>Adeniran, K.A. and K.Y. Kareem. (2014).</strong> Effectiveness of using floating drum bio-digester to treat domestic sewage. <em>AFRREV STECH</em>. <a href="http://www.ajol.info/index.php/stech/article/view/110217" target="_blank">Link to Publication</a>
         </li>
       </ul>
     </div>
