Update contact information and paragraph color

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section id="hero" class="d-flex align-items-center text-center">
     <div class="container">
       <h1 class="display-4 fw-bold">Advancing Resilience in a Changing Climate</h1>
-      <p class="lead" style="color: purple;">AI for Water Disaster | Dam Safety | Hydroclimatic Impacts on Reservoir Resilience | AI-driven hydrodynamic modeling | Flood, Landslide, and Drought Risk </p>
+      <p class="lead" style="color: red;">AI for Water Disaster | Dam Safety | Hydroclimatic Impacts on Reservoir Resilience | AI-driven hydrodynamic modeling | Flood, Landslide, and Drought Risk </p>
       <a href="#research" class="btn btn-primary btn-lg mt-3">Explore My Work</a>
     </div>
   </section>
@@ -156,9 +156,9 @@
     <div class="container">
       <h2>Contact</h2>
       <p>Interested in collaboration or research discussions?</p>
-      <p><i class="fas fa-envelope"></i> your.email@university.edu</p>
-      <a href="https://www.linkedin.com/in/your-linkedin" class="btn btn-outline-primary me-2"><i class="fab fa-linkedin"></i> LinkedIn</a>
-      <a href="https://scholar.google.com/citations?user=XXXXXX" class="btn btn-outline-secondary"><i class="fas fa-graduation-cap"></i> Google Scholar</a>
+      <p><i class="fas fa-envelope"></i> kareemkola99@gmail.com</p>
+      <a href="https://www.linkedin.com/in/kola-kareem-ph-d-07a240109/" class="btn btn-outline-primary me-2"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <a href="https://scholar.google.com/citations?user=g8ijRzAAAAAJ&hl=en&authuser=2" class="btn btn-outline-secondary"><i class="fas fa-graduation-cap"></i> Google Scholar</a>
     </div>
   </section>
 
