Fix title formatting and improve contact details
Updated title and contact information for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dr. (Engr) KAREEM, Kola Yusuff | Climate Resilience Research</title>
+  <title>Dr. (Engr.) KAREEM, Kola Yusuff | Climate Resilience Research</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
   <section id="hero" class="d-flex align-items-center text-center">
     <div class="container">
       <h1 class="display-4 fw-bold">Advancing Resilience in a Changing Climate</h1>
-      <p class="lead" style="color: red;">AI for Water Disaster | Dam Safety | Hydroclimatic Impacts on Reservoir Resilience | AI-driven hydrodynamic modeling | Flood, Landslide, and Drought Risk </p>
+      <p class="lead" style="color: red;">AI for Water Disaster | Dam Safety | Hydroclimatic Impacts on Reservoir Resilience | AI-driven hydrodynamic modeling | Flood, Landslide, and Drought Risks </p>
       <a href="#research" class="btn btn-primary btn-lg mt-3">Explore My Work</a>
     </div>
   </section>
@@ -54,10 +54,10 @@
           <h2>About Me</h2>
           <p>
             I am a postdoctoral researcher focused on improving the resilience of water infrastructure under the impact of climate change.
-            My work integrates <strong>AI, hydrodynamic models, and remote sensing</strong> to predict and prevent flood risks, optimize dam operations, and enhance disaster preparedness.
+            My work integrates <strong>AI, hydrodynamic models, smart water management techniques, reservoir modeling, and remote sensing</strong> to predict and mitigate flood and drought risks, optimize dam operations, and enhance disaster preparedness.
           </p>
           <p>
-            With expertise in <strong>hydroinformatics, machine learning, and climate risk assessment</strong>, I aim to bridge the gap between data-driven modeling and real-world water management.
+            With expertise in <strong>hydroinformatics, deep learning, hydrologic and hydrodynamic modeling, and climate risk assessment</strong>, I execute water resources and disaster prevention projects through data-driven modeling, physics-driven AI and real-world water management practices.
           </p>
         </div>
       </div>
@@ -83,7 +83,7 @@
             <div class="card-body text-center">
               <i class="fas fa-brain fa-3x mb-3 text-primary"></i>
               <h5 class="card-title">AI for Disaster Prediction</h5>
-              <p class="card-text">Leveraging deep learning and ensemble models for flood forecasting and early warning systems.</p>
+              <p class="card-text">Harnessing deep learning and ensemble models for flood forecasting and early warning systems.</p>
             </div>
           </div>
         </div>
@@ -92,7 +92,7 @@
             <div class="card-body text-center">
               <i class="fas fa-globe-americas fa-3x mb-3 text-primary"></i>
               <h5 class="card-title">Climate Impact Modeling</h5>
-              <p class="card-text">Simulating hydrological systems under climate change scenarios using integrated modeling frameworks.</p>
+              <p class="card-text">Simulating hydrological systems under climate change scenarios using AI and integrated modeling frameworks.</p>
             </div>
           </div>
         </div>
@@ -156,14 +156,14 @@
     <div class="container">
       <h2>Contact</h2>
       <p>Interested in collaboration or research discussions?</p>
-      <p><i class="fas fa-envelope"></i> kareemkola99@gmail.com</p>
+      <p><i class="fas fa-envelope"></i> kareemkola99@gmail.com | kareemkolayu@knu.ac.kr</p>
       <a href="https://www.linkedin.com/in/kola-kareem-ph-d-07a240109/" class="btn btn-outline-primary me-2"><i class="fab fa-linkedin"></i> LinkedIn</a>
       <a href="https://scholar.google.com/citations?user=g8ijRzAAAAAJ&hl=en&authuser=2" class="btn btn-outline-secondary"><i class="fas fa-graduation-cap"></i> Google Scholar</a>
     </div>
   </section>
 
   <footer class="bg-dark text-center text-light py-3">
-    <small>© 2025 Dr. (Engr) KAREEM, Kola Yusuff</small>
+    <small>© 2025 Dr. (Engr.) KAREEM, Kola Yusuff</small>
   </footer>
 
   <!-- Bootstrap JS -->
