Fix publication entry formatting in index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <h2 class="text-center mb-4">Selected Publications</h2>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
-          <strong>Kareem, K. Y., Choo, I., Lee, S., & Jung, Y. (2026).</strong> Improving River Flood Mapping with Adaptive Sampling and Artificial Intelligence Techniques for Enhanced Flood Risk Assessment. <em>Kareem, K. Y., Choo, I., Lee, S., & Jung, Y. (2026). Improving River Flood Mapping with Adaptive Sampling and Artificial Intelligence Techniques for Enhanced Flood Risk Assessment. Water Resources Management</em>. <a href="https://doi.org/10.1007/s11269-025-04366-5" target="_blank">[Link]</a>
+          <strong>Kareem, K. Y., Choo, I., Lee, S., & Jung, Y. (2026).</strong> Improving River Flood Mapping with Adaptive Sampling and Artificial Intelligence Techniques for Enhanced Flood Risk Assessment. <em>Water Resources Management</em>. <a href="https://doi.org/10.1007/s11269-025-04366-5" target="_blank">[Link]</a>
         </li>
         <li class="list-group-item">
           <strong>Arheimer, B., Cudennec, C., ..…Kareem, K.Y.,..Xia, J et al. (2024).</strong> The IAHS Science for Solutions decade, with Hydrology Engaging Local People IN one Global world (HELPING). <em>Hydrological Sciences Journal</em>. <a href="https://doi.org/10.1080/02626667.2024.2355202" target="_blank">[Link]</a>
